--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2"
+    "swiper": "^11.0.5",
+    "tailwindcss": "3.3.2",
+    "typewriter-effect": "^2.21.0"
   }
 }
